// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-FileIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M9.5 0H3.302C2.582 0 2 .583 2 1.302v13.396C2 15.418 2.583 16 3.302 16h9.396c.72 0 1.302-.582 1.302-1.303V4.5L9.5 0zm3.24 15H3.26c-.143 0-.26-.117-.26-.26V1.26c0-.143.117-.26.26-.26H9v2.698C9 4.418 9.582 5 10.302 5H13v9.74c0 .143-.117.26-.26.26z"
  />
</Icon>
`;

exports[`FileIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-FileIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M9.5 0H3.302C2.582 0 2 .583 2 1.302v13.396C2 15.418 2.583 16 3.302 16h9.396c.72 0 1.302-.582 1.302-1.303V4.5L9.5 0zm3.24 15H3.26c-.143 0-.26-.117-.26-.26V1.26c0-.143.117-.26.26-.26H9v2.698C9 4.418 9.582 5 10.302 5H13v9.74c0 .143-.117.26-.26.26z"
  />
</Icon>
`;

exports[`FileIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-FileIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M9.5 0H3.302C2.582 0 2 .583 2 1.302v13.396C2 15.418 2.583 16 3.302 16h9.396c.72 0 1.302-.582 1.302-1.303V4.5L9.5 0zm3.24 15H3.26c-.143 0-.26-.117-.26-.26V1.26c0-.143.117-.26.26-.26H9v2.698C9 4.418 9.582 5 10.302 5H13v9.74c0 .143-.117.26-.26.26z"
  />
</Icon>
`;
